2004-03-12  Jacob Smullyan <smulloni@smullyan.org>
     	* pylibs/PyDO/PyDO2.py: removed use of string module
	in favor of string methods (stylistic nit-pick).

2004-03-02    <drew@loki.sai.local>
	
	* SkunkWeb/Services/sessionHandler/FSSessionStore.py: removed one
	of the two leading underscores from get/setPickle

	* SkunkWeb/Services/auth/__init__.py (SessionAuthBase): now you
	can pass path, domain and secure to the constructor to set the 
	appropriate parameters on the session cookie

2004-03-01  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in (HTTPKeepaliveTimeout): document new default
	value for HTTPKeepaliveTimeout.

	* SkunkWeb/Services/httpd/__init__.py: setting default value of
	HTTPKeepaliveTimeout to 0 rather than 15.

2004-02-27    <drew@loki.sai.local>

	* SkunkWeb/sw.conf.in: added documentation of dontCacheSource,
	noTagDebug and runOutOfCache options

	* SkunkWeb/util/precompile.py.in: now can compile individual files
	and also deletes the cache file before compiling (otherwise if the
	timestamp isn't newer, it wouldn't recompile)

2004-02-26    <drew@loki.sai.local>

	* pylibs/SkunkExcept.py (SkunkSyntaxError.format): fix so that
	doing things like <:args `foo`:> don't totally bomb, but you get a
	reasonble error.

2004-02-23  Drew Csillag  <drew@loki.sai.local>

	* pylibs/AE/Executables.py (PythonExecutable.run): made so raising
	DTHaltError works within python components

2004-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/PyDO2.py (_pydobase): setting default value of the
	mutable property to be 1, as in the original PyDO.

2004-02-10  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/CacheTag.py (CacheTag.genCode): remove incorrect
	generated code that referred to __h.TimeUtil.

2004-02-05  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/SkunkWeb/Server.py (_aPrefixIn): typo fix that caused 
	errors every request for people using userModuleCleanup
